public interface ComparableDate<T> {
    public boolean comesBefore(T other);
}
