@startuml

abstract Event{
}

class Lecture{
}

class CityTrip{
}

enum EventCategory{
+ACADEMIC
+RECREATION
}

enum Transport{
+BIKE
+TRAIN
+CAR
}

class Agenda{
- class DatedEvent
}

struct BasicDate

class AdvancedDate

interface ComparableDate

EventCategory - Event : uses
Event <|-- Lecture
Event <|-- CityTrip
ComparableDate <-- BasicDate : uses
ComparableDate <-- AdvancedDate : uses
Transport - CityTrip: uses
@enduml